--- a/Home.css
+++ b/Home.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
     background-color: rgb(66, 65, 65);
+    overflow: hidden;
 }
 
 
@@ -24,10 +25,12 @@
 }
 
 #b{
-    height: 45vh;
     display: flex;
     justify-content: center;
+    flex-direction: column;
     align-items: center;
+    gap:5vh;
+    margin-top : 2vh;
 }
 
 
@@ -54,9 +57,3 @@
     margin-top: 20px;
 }
 
-#image{
-    width: 50%;
-    height: 100%;
-    margin-top: 20px;
-    display: none;
-}
